[UTF-8][Japanese]

*Ver3.15 : 2018/-/-

-adiary.conf.cgi.sample のパーサー設定の説明と順番を変更。
-更新通知Ping送信先から http://blogsearch.google.co.jp/ping/RPC2 を削除。
-プライベートブログでは更新通知を送らないように変更。
-irisテーマを再録。
-【plugin】カレンダーモジュールで、山の日、2020年の祝日移動に対応しました。
-【fix】https:// 接続時に生成されるリンクが一部 http:// になっていた。
-【fix】Edgeのバグ対応のため、dateのmaxを "2914-12-31" に変更。（[https://adiary.adiary.jp/0399#c1:Thanks to epg]）
-【fix/Markdown】引用などブロックの入れ子が起こると、目次記法（{*toc}）が出力されない。（Thanks to Kaede）

*Ver3.14a : 2018/03/05

-【fix】Perl5.26において記事が書き込めない。（[https://twitter.com/kero7/status/957502104305770496:Thanks to けろ]）
-【fix】Perl5.8.9において一部コンパイルエラーが起こる。
-【plugin】sp_view360（360度画像プラグイン）を収録。

*Ver3.14 : 2017/12/28

-テザインモジュール一覧のページをアップデート。
-テーマカスタム画面のオプション名を分かりやすくしました。
-ブログのコピー作成時、画像アルバムを初期化する機能を付けました。
-【Markdown】GFMのチェックボックス拡張に対応しました。（Request from Kaede）
-【plugin】ARTICLE_FIRST_VISIBLE_PINGイベントの追加。
-【plugin】WebPushの既知サーバに Edge のPushサーバを追加。
-【テーマ】過去のSpecial Editionテーマを見やすく修正。
-【fix/plugin】WebPushの「新着記事で送信しない」設定が動作していない。
-【fix/markdown】タグ中のシンタックスが処理されてしまう。（[https://github.com/nabe-abk/adiary/issues/5:Thanks to pawa]）

*Ver3.13 : 2017/08/22

-テーマ選択時、色可変テーマの持つ色式をロード時に判定するように変更（デバッグ目的）
-[https://adiary.org/v3man/Satsuki-tag/url-filter:filter記法]でSpeaker Deckに対応しました((しかしDebianサーバ等では、[https://www.bggofurther.com/2016/06/opensslpyopenssl-ssl23_get_server_hellotlsv1-alert-internal-error/:OpenSSLのバグ]によりエラーになります……。))
-【plugin】WebPushで、未知のサーバ（ブラウザ）でも登録可能な設定を追加。
-【plugin】WebPush通知登録済みでも、30日経過後は再度登録処理をするようにしました。((こうしておかないと何らかの要因でサーバ側のWebPush登録情報が破棄された場合、2度とブラウザ側から登録処理ができなくなってしまいます。))
-【fix/plugin】WebPushプラグインで、初回の登録処理が内部的に2度行われる。
-【fix/plugin】Twitter通知プラグイン「"'<>」などの文字が文字化けしてしまう。
-【fix】ローカルサーバと高速なブラウザにおいてデザイン編集がうまく機能しない。
-【fix】数字のみのタグ名をタグ一覧から編集できない。
-【fix】タグ名編集時、同名のタグがあってもエラーにならない。（Thanks to Kaede）
-【fix/テーマ】hatena2テーマとnature-forestテーマで個別の色を変更するとエラーになる。
-【Ver3.13a】【fix】「その他の設定」メニューの項目が間違っている。
-【Ver3.13a】【fix】WebPushプラグイン関連の細かいバグ。
-【Ver3.13a】ログインフォームのidのフィールド名を修正。((他のWebフォームの「id」と被ってるため、入力候補にいらない文字列がたくさん出るので。))

*Ver3.12 : 2017/05/13
