@@ -1,7 +1,7 @@
 ######################################################################
 title=タグ
-version=1.01
-#					(C)2015 nabe@abk
+version=1.10
+#					(C)2018 nabe@abk
 ######################################################################
 author=nabe@abk
 url=https://twitter.com/nabe_abk
@@ -11,27 +11,26 @@ adiary_version=2.941
 module_type=sidebar
 load_module_html_in_edit=1
 
-module_id=side-tag-list
+# 複数対応のため id 削除
+# module_id=side-tag-list
 
 # スマホメニュー対応
 sphone_menu=1
 
 *sample_html=<<HTML
-<div class="hatena-module" id="<@id>">
+<div class="hatena-module side-tag-list">
 <div class="hatena-moduletitle">タグ</div>
 <div class="hatena-modulebody">
 <ul id="sidetag-root" class="hatena-section">
-	<li><span class="js-switch" data-target="#sidetag-314"><a href="#">adiary</a> <span class="qt">(<span>414</span>)</span></span>
+	<li><span class="js-switch" data-target="#sidetag-314"><a href="#">日記</a> <span class="qt">(<span>414</span>)</span></span>
 	<ul id="sidetag-314">
-		<li><a href="#">雑記</a> <span class="qt">(<span>88</span>)</span></li>
-		<li><a href="#">snapshot</a> <span class="qt">(<span>48</span>)</span></li>
-		<li><a href="#">ToDo</a> <span class="qt">(<span>16</span>)</span></li>
-		<li><a href="#">仕様書</a> <span class="qt">(<span>8</span>)</span></li>
-		<li><a href="#">blogサービス</a> <span class="qt">(<span>8</span>)</span></li>
+		<li><a href="#">日常</a> <span class="qt">(<span>88</span>)</span></li>
+		<li><a href="#">食事</a> <span class="qt">(<span>48</span>)</span></li>
+		<li><a href="#">イベント</a> <span class="qt">(<span>16</span>)</span></li>
 	</ul>
 	</li>
 	<li><a href="#">プログラム</a> <span class="qt">(<span>76</span>)</span></li>
-	<li><a href="#">cgi</a> <span class="qt">(<span>12</span>)</span></li>
+	<li><a href="#">Linux</a> <span class="qt">(<span>12</span>)</span></li>
 	<li><a href="#">ネット</a> <span class="qt">(<span>24</span>)</span></li>
 </ul>
 </div>
@@ -40,11 +39,8 @@ HTML
 
 *module_html=<<HTML
 <!--タグリスト=====================================-->
-<div class="hatena-module" id="<@id>" data-module-name="<@this>">
-<div class="hatena-moduletitle">タグ</div>
-<div class="hatena-modulebody">
+<div class="hatena-module side-tag-list" id="<@id>" data-module-name="<@this>">
 <@v.load_plgset('<@this>', 'html')>
-</div> <!-- hatena-modulebody -->
 </div> <!-- hatena-module -->
 HTML
 
